--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 	<title data-vue-meta="true">Themes · Kex1016</title>
 	<meta data-vue-meta="true" property="og:title" content="Kex1016">
 	<meta data-vue-meta="true" property="og:description" content="Kex1016&#x27;s AniList user themes">
-	<meta data-vue-meta="true" property="og:image" content="../s4.anilist.co/file/anilistcdn/user/avatar/large/b115130-vINT8Jrzd68V.png">
+	<meta data-vue-meta="true" property="og:image" content="img/avatar.png">
 	<meta data-vue-meta="true" property="og:url" content="https://kex1016.ga/themes">
 	<meta data-vue-meta="true" property="og:title" content="Kex1016">
 	<meta data-vue-meta="true" property="og:description" content="Kex1016&#x27;s AniList user themes">
-	<meta data-vue-meta="true" property="og:image" content="../s4.anilist.co/file/anilistcdn/user/avatar/large/b115130-vINT8Jrzd68V.png">
+	<meta data-vue-meta="true" property="og:image" content="img/avatar.png">
 	<meta data-vue-meta="true" property="og:url" content="https://kex1016.ga/themes">
 	<link data-vue-meta="true" rel="canonical" href="https://kex1016.ga/themes">
 	<link data-vue-meta="true" rel="canonical" href="https://kex1016.ga/themes">
