--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta http-equiv=x-ua-compatible content="ie=edge">
 	<meta http-equiv=Content-Security-Policy content=block-all-mixed-content>
 	<meta name=viewport content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1,user-scalable=no">
-	<meta property=og:site_name content=Kex1016>
+	<meta property=og:site_name content="Kex's epic site">
 	<meta name=twitter:site content=@kex1016>
 	<meta name=twitter:card content=summary>
 	<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel=stylesheet>
